--- a/frontend/index.html
+++ b/frontend/index.html
@@ -94,6 +94,7 @@
     Zum Starten den Kopf antippen, zum Fragen kurz Mikro drücken, nach Ende der Frage nochmal Mikro drücken
   </footer>
 
+  <!-- Three.js (r146) -->
   <script src="https://cdn.jsdelivr.net/npm/three@0.146.0/build/three.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/three@0.146.0/examples/js/loaders/GLTFLoader.js"></script>
 
@@ -102,7 +103,10 @@
     let baseRotY = Math.PI / 2;
     let baseRotX = 0;
     let baseY = 0.6;
-    let jawDict = null, jawInfluences = null, jawIndex = null;
+
+    let jawDict = null;
+    let jawInfluences = null;
+    let jawIndex = null;
 
     const scene = new THREE.Scene();
     const camera = new THREE.PerspectiveCamera(30, window.innerWidth / window.innerHeight, 0.1, 1000);
@@ -133,59 +137,59 @@
         model = gltf.scene;
         scene.add(model);
 
-        // === Dunkel-goldener metallischer Mundshader ===
+        // === Dunkel-goldener Mundshader (funktionierend) ===
         model.traverse((child) => {
-          if (child.isMesh && child.material) {
+          if (child.isMesh && child.material && child.material.isMeshStandardMaterial) {
             child.material.side = THREE.DoubleSide;
 
             child.material.onBeforeCompile = (shader) => {
+              shader.uniforms.mouthTopColor = { value: new THREE.Color(0.2, 0.15, 0.03) };   // dunkel oben
+              shader.uniforms.mouthBottomColor = { value: new THREE.Color(0.6, 0.45, 0.1) }; // heller unten
+
               shader.fragmentShader = shader.fragmentShader.replace(
-                '#include <output_fragment>',
+                '#include <dithering_fragment>',
                 `
+                #include <dithering_fragment>
                 if (!gl_FrontFacing) {
-                  float v = clamp((normalize(vViewPosition).y + 1.0) * 0.5, 0.0, 1.0);
-                  vec3 topColor = vec3(0.2, 0.15, 0.03);
-                  vec3 bottomColor = vec3(0.6, 0.45, 0.1);
-                  vec3 gradColor = mix(topColor, bottomColor, v);
-                  gl_FragColor = vec4(gradColor, 1.0);
+                  float v = (vViewPosition.y + 0.5);
+                  vec3 gradColor = mix(mouthTopColor, mouthBottomColor, clamp(v, 0.0, 1.0));
+                  gl_FragColor.rgb = gradColor * gl_FragColor.rgb;
                 }
-                #include <output_fragment>
                 `
               );
             };
 
-            // Metalleffekt
-            child.material.metalness = 1.0;
-            child.material.roughness = 0.3;
             child.material.needsUpdate = true;
           }
+        });
+        // === Ende Mundshader ===
 
-          // jawOpen finden
+        // jawOpen finden
+        model.traverse((child) => {
           if (child.isMesh && child.morphTargetDictionary) {
             jawDict = child.morphTargetDictionary;
             jawInfluences = child.morphTargetInfluences;
             if ("jawOpen" in jawDict) jawIndex = jawDict["jawOpen"];
           }
         });
-        // === Ende Mundshader ===
 
-        // Modell zentrieren und leicht anheben
+        // Zentrierung & Ausrichtung
         const box = new THREE.Box3().setFromObject(model);
         const size = box.getSize(new THREE.Vector3());
         const center = box.getCenter(new THREE.Vector3());
         model.position.sub(center);
-        model.position.y += 0.05;
         model.rotation.set(0, -Math.PI / 2, 0);
 
         const maxDim = Math.max(size.x, size.y, size.z);
         const fov = camera.fov * (Math.PI / 180);
-        let cameraZ = Math.abs(maxDim / 2 / Math.tan(fov / 2)) * 1.4;
+        let cameraZ = Math.abs(maxDim / 2 / Math.tan(fov / 2));
+        cameraZ *= 1.4;
         camera.position.set(0, 0, cameraZ);
         camera.lookAt(0, 0, 0);
 
         baseRotY = model.rotation.y;
         baseRotX = model.rotation.x;
-        baseY = model.position.y;
+        baseY = model.position.y + 0.05; // Kopf leicht höher
 
         loadingText.style.display = "none";
         animate();
@@ -210,7 +214,7 @@
       renderer.render(scene, camera);
     }
 
-    // === Sprachsteuerung ===
+    // Sprachsteuerung
     const micBtn = document.getElementById("micBtn");
     const micNotice = document.getElementById("micNotice");
     let recognizing = false;
@@ -221,6 +225,7 @@
       recognition.lang = "de-DE";
       recognition.continuous = false;
       recognition.interimResults = false;
+
       recognition.onresult = async (event) => {
         const text = event.results[0][0].transcript;
         console.log("🎙️ Gesprochen:", text);
@@ -232,21 +237,23 @@
         const data = await response.json();
         speak(data.answer);
       };
+
       recognition.onend = () => (recognizing = false);
     } else {
-      micNotice.textContent = "🎤 Sprachsteuerung wird in diesem Browser nicht unterstützt.";
+      micNotice.textContent = "🎤 Sprachsteuerung wird in diesem Browser nicht unterstützt, bitte anderen Browser verwenden.";
     }
 
     micBtn.onclick = () => {
-      if (!recognition) return;
-      if (recognizing) {
-        recognition.stop();
-        recognizing = false;
-        micBtn.style.background = "#222";
-      } else {
-        recognition.start();
-        recognizing = true;
-        micBtn.style.background = "#555";
+      if (recognition) {
+        if (recognizing) {
+          recognition.stop();
+          recognizing = false;
+          micBtn.style.background = "#222";
+        } else {
+          recognition.start();
+          recognizing = true;
+          micBtn.style.background = "#555";
+        }
       }
     };
 
@@ -267,7 +274,8 @@
       const vowels = "aäeéiíoöuüyAUOÄÖÜaeiou";
       const baseInterval = 0.09;
       let t = 0;
-      for (let ch of text) {
+      for (let i = 0; i < text.length; i++) {
+        const ch = text[i];
         const strength = vowels.includes(ch) ? 1.0 : 0.6;
         pulses.push({ time: t, strength });
         t += baseInterval * (ch === " " ? 1.4 : 1.0);
