--- a/frontend/index.html
+++ b/frontend/index.html
@@ -109,6 +109,7 @@
     let jawIndex = null;
 
     const scene = new THREE.Scene();
+    scene.background = new THREE.Color(0x000000);
     const camera = new THREE.PerspectiveCamera(30, window.innerWidth / window.innerHeight, 0.1, 1000);
     camera.position.set(0, 0, 2.8);
 
