--- a/frontend/index.html
+++ b/frontend/index.html
@@ -128,25 +128,35 @@ loader.load("./avatar.glb",
 });
 
 
-    // === Notlösung Mundinnenraum als Kugel ===
-    (function addMouthInterior(){
-      const box = new THREE.Box3().setFromObject(model);
-      const size = box.getSize(new THREE.Vector3());
-      const radius = Math.max(size.x,size.y,size.z)*0.4;
-      const geom = new THREE.SphereGeometry(radius, 16, 8);
-const mat = new THREE.MeshBasicMaterial({
-  color: 0x00ff00,
-  wireframe: true  // Nur Drahtgitter sichtbar
-});
-const innerSphere = new THREE.Mesh(geom, mat);
+    // === Notlösung: Mundinnenraum als kleine Kugel sichtbar machen ===
+(function addMouthInterior() {
+  const box = new THREE.Box3().setFromObject(model);
+  const size = box.getSize(new THREE.Vector3());
+  
+  // Kugelradius: 10% der größten Kopfdimension
+  const radius = Math.max(size.x, size.y, size.z) * 0.1;
+  const geom = new THREE.SphereGeometry(radius, 32, 16);
 
-      //const geom = new THREE.SphereGeometry(radius, 32, 16);
-//const mat = new THREE.MeshBasicMaterial({ color: 0x201000, side: THREE.BackSide, transparent: true, opacity: 0.7 });
-//const innerSphere = new THREE.Mesh(geom, mat);
-innerSphere.position.set(0, -0.05, 0.08);  // Setzt die Position so, dass sie im Mundraum gut passt
-innerSphere.scale.set(1.2, 1.2, 1.2);  // Skalierung, falls die Kugel zu klein oder zu groß ist
-model.add(innerSphere);
-    })();
+  // Material: halbtransparent, grünlich für bessere Sichtbarkeit
+  const mat = new THREE.MeshBasicMaterial({
+    color: 0x00ff00,
+    wireframe: true,
+    transparent: true,
+    opacity: 0.5,
+    side: THREE.BackSide
+  });
+
+  const innerSphere = new THREE.Mesh(geom, mat);
+
+  // Position: leicht anpassen, damit Kugel im Mund sitzt
+  innerSphere.position.set(0, 0.02, 0.03);
+
+  // Damit die Kugel nicht vom Kopf überdeckt wird
+  innerSphere.renderOrder = 0;
+  model.traverse(c => { if(c.isMesh) c.renderOrder = 1; });
+
+  model.add(innerSphere);
+})();
 
     // jawOpen Morph finden
     model.traverse(child=>{
