--- a/frontend/index.html
+++ b/frontend/index.html
@@ -75,263 +75,4 @@ footer {
   color: #aaa;
 }
 footer a { color: #aaa; text-decoration: none; }
-footer a:hover { text-decoration: underline; }
-</style>
-</head>
-<body>
-<h1>Frag Friedrich</h1>
-<div id="loading">Avatar wird geladen…</div>
-<canvas id="avatarCanvas"></canvas>
-<button id="micBtn">🎤</button>
-<div id="micNotice"></div>
-<footer>
-© 2025 <a href="https://christoph-dammann.de" target="_blank">Dr. Christoph Dammann</a><br>
-Zum Starten den Kopf antippen, zum Fragen kurz Mikro drücken, nach Ende der Frage nochmal Mikro drücken
-</footer>
-
-<script src="https://cdn.jsdelivr.net/npm/three@0.146.0/build/three.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/three@0.146.0/examples/js/loaders/GLTFLoader.js"></script>
-<script>
-let model, talking=false;
-let baseRotY=Math.PI/2, baseRotX=0, baseY=0.6;
-let jawDict=null, jawInfluences=null, jawIndex=null;
-
-const scene = new THREE.Scene();
-const camera = new THREE.PerspectiveCamera(30, window.innerWidth/window.innerHeight, 0.1, 1000);
-camera.position.set(0,0,2.8);
-
-const renderer = new THREE.WebGLRenderer({canvas:document.getElementById("avatarCanvas"), antialias:true});
-renderer.setSize(window.innerWidth, window.innerHeight);
-renderer.setPixelRatio(window.devicePixelRatio);
-renderer.setClearColor(0x000000);
-
-const light = new THREE.DirectionalLight(0xffffff,2);
-light.position.set(1,1,2);
-scene.add(light);
-scene.add(new THREE.AmbientLight(0xffffff,0.8));
-const frontLight = new THREE.PointLight(0xffffff,0.8);
-frontLight.position.set(0,0.5,2);
-scene.add(frontLight);
-
-const loader = new THREE.GLTFLoader();
-const loadingText=document.getElementById("loading");
-
-loader.load("./avatar.glb",
-  (gltf) => {
-    model = gltf.scene;
-    scene.add(model);
-
-    // Kopf zunächst komplett undurchsichtig
-    model.traverse((child) => {
-      if (child.isMesh && child.material) {
-        child.material.transparent = false;
-        child.material.opacity = 1.0;
-      }
-    });
-
-    // === Mundinnenraum als Kugel ===
-    (function addMouthInterior() {
-      const box = new THREE.Box3().setFromObject(model);
-      const size = box.getSize(new THREE.Vector3());
-      const center = box.getCenter(new THREE.Vector3());
-
-      // Kugelradius auf 20% der maximalen Kopfgröße
-      const radius = Math.max(size.x, size.y, size.z) * 0.2;
-      const geom = new THREE.SphereGeometry(radius, 32, 16);
-
-      // Material dunkelgold, BackSide für Innenflächen
-      const mat = new THREE.MeshBasicMaterial({
-        color: 0x60400a,
-        side: THREE.BackSide,
-        transparent: false,
-      });
-
-      const innerSphere = new THREE.Mesh(geom, mat);
-
-      // Position: leicht unterhalb des Kopfmittelpunkts, experimentell anpassen
-      innerSphere.position.set(center.x, center.y - size.y * 0.15, center.z);
-
-      // Sicherstellen, dass die Kugel hinter dem Kopf gerendert wird
-      innerSphere.renderOrder = 0;
-      model.traverse(c => { if (c.isMesh) c.renderOrder = 1; });
-
-      model.add(innerSphere);
-    })();
-    // === Ende Mundinnenraum ===
-
-    // jawOpen Morph finden
-    model.traverse((child) => {
-      if (child.isMesh && child.morphTargetDictionary) {
-        jawDict = child.morphTargetDictionary;
-        jawInfluences = child.morphTargetInfluences;
-        if ("jawOpen" in jawDict) jawIndex = jawDict["jawOpen"];
-      }
-    });
-
-    // Zentrieren & Ausrichten
-    const box = new THREE.Box3().setFromObject(model);
-    const size = box.getSize(new THREE.Vector3());
-    const center = box.getCenter(new THREE.Vector3());
-    model.position.sub(center);
-    model.rotation.set(0, -Math.PI / 2, 0);
-
-    // Kamera
-    const maxDim = Math.max(size.x, size.y, size.z);
-    const fov = camera.fov * Math.PI / 180;
-    let cameraZ = Math.abs(maxDim / 2 / Math.tan(fov / 2)) * 1.4;
-    camera.position.set(0, 0, cameraZ);
-    camera.lookAt(0, 0, 0);
-
-    baseRotY = model.rotation.y;
-    baseRotX = model.rotation.x;
-    baseY = model.position.y + 0.05;
-
-    loadingText.style.display = "none";
-    animate();
-  },
-  undefined,
-  (err) => console.error("Fehler beim Laden des Modells:", err)
-);
-
-    
-function animate(){
-  requestAnimationFrame(animate);
-  if(model){
-    if(talking){
-      model.rotation.y = baseRotY + Math.sin(Date.now()*0.0015)*0.04;
-      model.rotation.x = baseRotX + Math.sin(Date.now()*0.0019)*0.025;
-      model.position.y = baseY + Math.sin(Date.now()*0.01)*0.004;
-    } else {
-      model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, baseRotY,0.05);
-      model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, baseRotX,0.05);
-      model.position.y = THREE.MathUtils.lerp(model.position.y, baseY,0.05);
-    }
-  }
-  renderer.render(scene,camera);
-}
-
-// Sprachsteuerung
-const micBtn=document.getElementById("micBtn");
-const micNotice=document.getElementById("micNotice");
-let recognizing=false, recognition;
-
-if("webkitSpeechRecognition" in window){
-  recognition=new webkitSpeechRecognition();
-  recognition.lang="de-DE";
-  recognition.continuous=false;
-  recognition.interimResults=false;
-
-  recognition.onresult=async (event)=>{
-    const text=event.results[0][0].transcript;
-    const resp = await fetch("/ask",{method:"POST", headers:{"Content-Type":"application/json"}, body:JSON.stringify({text})});
-    const data = await resp.json();
-    speak(data.answer);
-  };
-  recognition.onend=()=>recognizing=false;
-} else { micNotice.textContent="🎤 Sprachsteuerung wird in diesem Browser nicht unterstützt."; }
-
-micBtn.onclick=()=>{
-  if(recognition){
-    if(recognizing){ recognition.stop(); recognizing=false; micBtn.style.background="#222"; }
-    else { recognition.start(); recognizing=true; micBtn.style.background="#555"; }
-  }
-};
-
-function getMaleVoice(){
-  const voices=speechSynthesis.getVoices();
-  return voices.find(v=>/male|mann|stefan|markus|male/i.test(v.name))||voices.find(v=>v.lang.startsWith("de"))||voices[0];
-}
-
-let jawDriverRAF=null;
-
-function buildPulseSchedule(text, rate=1.0){
-  const durationEst=Math.max(0.8,text.length/(12*rate));
-  const pulses=[];
-  const vowels="aäeéiíoöuüyAUOÄÖÜaeiou";
-  let t=0;
-  for(let i=0;i<text.length;i++){
-    const ch=text[i];
-    const strength=vowels.includes(ch)?1.0:0.6;
-    pulses.push({time:t,strength});
-    t+=0.09*(ch===" "?1.4:1.0);
-  }
-  const scale = durationEst/(t||1);
-  pulses.forEach(p=>p.time*=scale);
-  return {pulses,duration:durationEst};
-}
-
-function startJawDriver(text, rate=1.0){
-  if(jawDriverRAF) cancelAnimationFrame(jawDriverRAF);
-  const {pulses,duration}=buildPulseSchedule(text, rate);
-  const start=performance.now();
-  const pulseWidth=0.08, base=0.03, maxOpen=0.55;
-
-  function envelopeAt(t){
-    let e=0;
-    for(const p of pulses){
-      const dt=Math.abs(t-p.time);
-      if(dt<pulseWidth) e+=(1-dt/pulseWidth)*p.strength;
-    }
-    e+=0.15*(0.5+0.5*Math.sin(t*6.0));
-    return Math.min(1.0,e);
-  }
-
-  function step(){
-    const now=performance.now();
-    const t=(now-start)/1000;
-    const active=talking && jawInfluences && jawIndex!==null;
-    if(active){
-      const env=envelopeAt(Math.min(t,duration));
-      const target=THREE.MathUtils.clamp(base+env*maxOpen,0,1);
-      jawInfluences[jawIndex]=THREE.MathUtils.lerp(jawInfluences[jawIndex]||0,target,0.5);
-      jawDriverRAF=requestAnimationFrame(step);
-    }
-  }
-  step();
-}
-
-function stopJawDriver(){
-  if(jawDriverRAF) cancelAnimationFrame(jawDriverRAF);
-  jawDriverRAF=null;
-  if(jawInfluences && jawIndex!==null){
-    const closer=()=>{
-      const current=jawInfluences[jawIndex]||0;
-      const next=THREE.MathUtils.lerp(current,0,0.3);
-      jawInfluences[jawIndex]=next;
-      if(Math.abs(next)>0.001) requestAnimationFrame(closer);
-    };
-    closer();
-  }
-}
-
-function speak(text){
-  const utter=new SpeechSynthesisUtterance(text);
-  utter.lang="de-DE";
-  utter.rate=0.95;
-  utter.pitch=0.6;
-  utter.voice=getMaleVoice();
-  utter.onstart=()=>{ talking=true; startJawDriver(text, utter.rate); };
-  utter.onend=()=>{ talking=false; stopJawDriver(); };
-  speechSynthesis.speak(utter);
-}
-
-if(typeof speechSynthesis!=="undefined" && speechSynthesis.onvoiceschanged!==undefined){
-  speechSynthesis.onvoiceschanged=getMaleVoice;
-}
-
-let greeted=false;
-window.addEventListener("click", ()=>{
-  if(!greeted){
-    greeted=true;
-    speak("Seid gegrüßt, mein Freund. Ich bin Friedrich Barbarossa, nach tausend Jahren im Kaiserberg zu Lautern erwacht aus tiefem Schlummer. Sprecht, was begehrt Ihr?");
-  }
-});
-
-window.addEventListener("resize", ()=>{
-  camera.aspect=window.innerWidth/window.innerHeight;
-  camera.updateProjectionMatrix();
-  renderer.setSize(window.innerWidth, window.innerHeight);
-});
-</script>
-</body>
-</html>
+footer
