--- a/frontend/index.html
+++ b/frontend/index.html
@@ -125,15 +125,20 @@ loader.load("./avatar.glb",
     (function addMouthInterior(){
       const box = new THREE.Box3().setFromObject(model);
       const size = box.getSize(new THREE.Vector3());
-      const radius = Math.max(size.x, size.y, size.z) * 0.12; // kleiner als Kugel
-      const geometry = new THREE.CircleGeometry(radius, 32);
-      const material = new THREE.MeshBasicMaterial({
-        color: 0x403000, // dunkelgolden
+      const radius = Math.max(size.x, size.y, size.z) * 0.09;
+      const geometry = new THREE.CircleGeometry(radius, 48);
+      const material = new THREE.MeshStandardMaterial({
+        color: 0x705020,
+        emissive: 0x201000,
+        metalness: 0.6,
+        roughness: 0.4,
         side: THREE.DoubleSide
       });
       const mouthDisk = new THREE.Mesh(geometry, material);
-      mouthDisk.rotation.x = -Math.PI / 2; // flach ausrichten
-      mouthDisk.position.set(0, -0.03, 0.08); // leicht nach unten & vorne
+
+      // leicht geneigt und nach innen verschoben
+      mouthDisk.rotation.x = -Math.PI / 2.2;
+      mouthDisk.position.set(0, -0.08, 0.06); // etwas tiefer und näher am Gesicht
       model.add(mouthDisk);
     })();
     // === Ende Mundinnenraum ===
@@ -187,7 +192,7 @@ function animate(){
   renderer.render(scene,camera);
 }
 
-// Sprachsteuerung
+// Sprachsteuerung + Lippenbewegung
 const micBtn=document.getElementById("micBtn");
 const micNotice=document.getElementById("micNotice");
 let recognizing=false, recognition;
@@ -197,7 +202,6 @@ if("webkitSpeechRecognition" in window){
   recognition.lang="de-DE";
   recognition.continuous=false;
   recognition.interimResults=false;
-
   recognition.onresult=async (event)=>{
     const text=event.results[0][0].transcript;
     const resp = await fetch("/ask",{method:"POST", headers:{"Content-Type":"application/json"}, body:JSON.stringify({text})});
@@ -220,7 +224,6 @@ function getMaleVoice(){
 }
 
 let jawDriverRAF=null;
-
 function buildPulseSchedule(text, rate=1.0){
   const durationEst=Math.max(0.8,text.length/(12*rate));
   const pulses=[];
@@ -236,13 +239,11 @@ function buildPulseSchedule(text, rate=1.0){
   pulses.forEach(p=>p.time*=scale);
   return {pulses,duration:durationEst};
 }
-
 function startJawDriver(text, rate=1.0){
   if(jawDriverRAF) cancelAnimationFrame(jawDriverRAF);
   const {pulses,duration}=buildPulseSchedule(text, rate);
   const start=performance.now();
   const pulseWidth=0.08, base=0.03, maxOpen=0.55;
-
   function envelopeAt(t){
     let e=0;
     for(const p of pulses){
@@ -252,7 +253,6 @@ function startJawDriver(text, rate=1.0){
     e+=0.15*(0.5+0.5*Math.sin(t*6.0));
     return Math.min(1.0,e);
   }
-
   function step(){
     const now=performance.now();
     const t=(now-start)/1000;
@@ -266,7 +266,6 @@ function startJawDriver(text, rate=1.0){
   }
   step();
 }
-
 function stopJawDriver(){
   if(jawDriverRAF) cancelAnimationFrame(jawDriverRAF);
   jawDriverRAF=null;
@@ -280,7 +279,6 @@ function stopJawDriver(){
     closer();
   }
 }
-
 function speak(text){
   const utter=new SpeechSynthesisUtterance(text);
   utter.lang="de-DE";
@@ -291,11 +289,9 @@ function speak(text){
   utter.onend=()=>{ talking=false; stopJawDriver(); };
   speechSynthesis.speak(utter);
 }
-
 if(typeof speechSynthesis!=="undefined" && speechSynthesis.onvoiceschanged!==undefined){
   speechSynthesis.onvoiceschanged=getMaleVoice;
 }
-
 let greeted=false;
 window.addEventListener("click", ()=>{
   if(!greeted){
@@ -303,7 +299,6 @@ window.addEventListener("click", ()=>{
     speak("Seid gegrüßt, mein Freund. Ich bin Friedrich Barbarossa, nach tausend Jahren im Kaiserberg zu Lautern erwacht aus tiefem Schlummer. Sprecht, was begehrt Ihr?");
   }
 });
-
 window.addEventListener("resize", ()=>{
   camera.aspect=window.innerWidth/window.innerHeight;
   camera.updateProjectionMatrix();
